--- a/lacture-1/index.html
+++ b/lacture-1/index.html
@@ -9,13 +9,24 @@
 </head>
 
 <body>
-    <h1>Hello</h1>
+    <!-- <h1>Hello</h1>
 
     <button onclick="ABC()">Click</button>
     <img class="FirstImage" src="img/001.png" alt="">
     <button onclick="ChangeImage()">Change Image</button>
 
+    <div class="visibleText"></div>
+    <button onclick="visibleText()"> visible Text</button> -->
 
+
+    <h1>Hello</h1>
+    <button onclick="Clicked()">Click Me!</button>
+
+    <img class="FirstImage" src="img/001.png" alt="">
+    <button onclick="ChangeImage()">Change Image</button>
+
+    <div class="InsideDiv"></div>
+    <button onclick="visibleText()"> visible Text</button>
 </body>
 <script src="main.js"></script>
 
