--- a/lacture-1/index.html
+++ b/lacture-1/index.html
@@ -9,24 +9,9 @@
 </head>
 
 <body>
-    <!-- <h1>Hello</h1>
-
-    <button onclick="ABC()">Click</button>
-    <img class="FirstImage" src="img/001.png" alt="">
-    <button onclick="ChangeImage()">Change Image</button>
-
-    <div class="visibleText"></div>
-    <button onclick="visibleText()"> visible Text</button> -->
-
-
-    <h1>Hello</h1>
-    <button onclick="Clicked()">Click Me!</button>
-
-    <img class="FirstImage" src="img/001.png" alt="">
-    <button onclick="ChangeImage()">Change Image</button>
-
-    <div class="InsideDiv"></div>
-    <button onclick="visibleText()"> visible Text</button>
+    <div class="InsideDiv">
+        <button onclick="VisibleText()">Click ME!</button>
+    </div>
 </body>
 <script src="main.js"></script>
 
