--- a/lacture-5/index.html
+++ b/lacture-5/index.html
@@ -66,9 +66,9 @@
 
         <button type="submit" class="btn btn-outline-primary w-100">Submit</button>
     </form>
-    <div class="ShowResult">
+    <h1 class="ShowResult alert text-center">
 
-    </div>
+    </h1>
 
 
 </body>
