--- a/lacture-7/sign-up-form.html
+++ b/lacture-7/sign-up-form.html
@@ -67,10 +67,12 @@
 
                                         <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
                                             <button type="submit" class="btn btn-outline-primary w-110">Sign
-                                                In</button>
+                                                Up</button>
                                         </div>
 
                                     </form>
+                                    <div class="text-center mt-4"> <span>Not a member?</span> <a
+                                            class="text-decoration-none" href="sign-in-form.html">Sign-In</a> </div>
 
                                 </div>
                                 <div class="col-md-10 col-lg-6 col-xl-7 d-flex align-items-center order-1 order-lg-2">
@@ -85,6 +87,12 @@
                 </div>
             </div>
         </div>
+        <button class="btn btn-outline-danger my-5" onclick="splitString()">CheckSplitFunction</button>
+
+        <button class="btn btn-outline-danger my-5" onclick="RandomTokenGenerator()">Random Token</button>
+
+        <button class="btn btn-outline-danger my-5" onclick="SubString()">Sub String</button>
+
         <h1 class="ShowResult alert text-center">
 
         </h1>
