--- a/lacture-7/sign-up-form.html
+++ b/lacture-7/sign-up-form.html
@@ -12,96 +12,70 @@
 </head>
 
 <body>
-    <section class=" height-auto" style="background-color: #eee;">
-        <div class="container h-100 ">
-            <div class="row d-flex justify-content-center align-items-center h-100">
-                <div class="col-lg-12 col-xl-11">
-                    <div class="card text-black" style="border-radius: 25px;">
-                        <div class="card-body p-md-5">
-                            <div class="row justify-content-center">
-                                <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
-
-                                    <p class="text-center h1 fw-bold mb-4 mx-1 mx-md-4 mt-0">Sign up</p>
-
-                                    <form class="mx-1 mx-md-4" onsubmit="SubmitUserDetails();return false">
-
-                                        <div class="d-flex flex-row align-items-center mb-4">
-                                            <i class="fas fa-user fa-lg me-3 fa-fw"></i>
-                                            <div class="form-outline flex-fill mb-0">
-                                                <label class="form-label" for="form3Example1c">Your Name</label>
-                                                <input type="text" id="form3Example1c" class="form-control Name" />
-
-                                            </div>
-                                        </div>
-
-                                        <div class="d-flex flex-row align-items-center mb-4">
-                                            <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
-                                            <div class="form-outline flex-fill mb-0">
-                                                <label class="form-label" for="form3Example3c">Your Email</label>
-                                                <input type="email" id="form3Example3c" class="form-control Email" />
-
-                                            </div>
-                                        </div>
-
-                                        <div class="d-flex flex-row align-items-center mb-4">
-                                            <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
-                                            <div class="form-outline flex-fill mb-0">
-                                                <label class="form-label" for="form3Example4c">Password</label>
-                                                <input type="password" id="form3Example4c"
-                                                    class="form-control Password" />
-
-                                            </div>
-                                        </div>
-
-                                        <div class="d-flex flex-row align-items-center mb-4">
-                                            <i class="fas fa-key fa-lg me-3 fa-fw"></i>
-                                            <div class="form-outline flex-fill mb-0">
-                                                <label class="form-label" for="form3Example4cd">Repeat your
-                                                    password</label>
-                                                <input type="password" id="form3Example4cd"
-                                                    class="form-control RepPassword" />
-
-                                            </div>
-                                        </div>
-
-
-                                        <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
-                                            <button type="submit" class="btn btn-outline-primary w-110">Sign
-                                                Up</button>
-                                        </div>
-
-                                    </form>
-                                    <div class="text-center mt-4"> <span>Not a member?</span> <a
-                                            class="text-decoration-none" href="sign-in-form.html">Sign-In</a> </div>
-
-                                </div>
-                                <div class="col-md-10 col-lg-6 col-xl-7 d-flex align-items-center order-1 order-lg-2">
-
-                                    <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-registration/draw1.webp"
-                                        class="img-fluid" alt="Sample image">
-
-                                </div>
-                            </div>
+    <div class="container mt-5 mb-5">
+        <div class="row d-flex align-items-center justify-content-center">
+            <div class="col-md-6">
+                <div class="card px-5 py-5"> <span class="circle"><i class="fa fa-check"></i></span>
+                    <h5 class="mt-3">Join over 25 million <br> Customer from around the Globe</h5>
+                    <h4 class="text-center text-info"> SignUp </h4>
+                    <form id="MyForm" onsubmit="SubmitUserDetails(); return false">
+                        <div class="mb-3">
+                            <label for="exampleInputEmail1" class="form-label">Name</label>
+                            <input type="text" class="form-control Name" aria-describedby="emailHelp">
                         </div>
-                    </div>
+                        <div class="mb-3">
+                            <label for="exampleInputEmail1" class="form-label">House Address</label>
+                            <input type="text" class="form-control House" aria-describedby="emailHelp">
+                        </div>
+                        <div class="mb-3">
+                            <label for="exampleInputEmail1" class="form-label">Email address</label>
+                            <input type="email" class="form-control Email" aria-describedby="emailHelp">
+                        </div>
+                        <div class="mb-3">
+                            <label for="exampleInputEmail1" class="form-label">Phone Number</label>
+                            <input type="number" class="form-control Phone" aria-describedby="emailHelp">
+                        </div>
+                        <div class="mb-3">
+                            <label for="exampleInputEmail1" class="form-label">Password</label>
+                            <input type="password" class="form-control password" aria-describedby="emailHelp">
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input radio" type="radio" name="flexRadioDefault"
+                                id="flexRadioDefault1" value="abc">
+                            <label class="form-check-label" for="flexRadioDefault1">
+                                abc
+                            </label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input radio" type="radio" name="flexRadioDefault"
+                                id="flexRadioDefault2" value="qwe">
+                            <label class="form-check-label" for="flexRadioDefault2">
+                                qwe
+                            </label>
+                        </div>
+                        <button type="submit" class="btn btn-outline-success mt-5 w-100">Submit</button>
+                    </form>
+                    <div class="text-center mt-4"> <span>Already a member?</span> <a class="text-decoration-none"
+                            href="sign-in-form.html">Login</a> </div>
                 </div>
             </div>
         </div>
-        <button class="btn btn-outline-danger my-5" onclick="splitString()">CheckSplitFunction</button>
+    </div>
 
-        <button class="btn btn-outline-danger my-5" onclick="RandomTokenGenerator()">Random Token</button>
+    <button class="btn btn-outline-warning my-3" onclick="SplitString()">CheckSplitFunction</button>
 
-        <button class="btn btn-outline-danger my-5" onclick="SubString()">Sub String</button>
+    <button class="btn btn-outline-warning my-3" onclick="RandomTokenGenerator()">Generator Random Token</button>
 
-        <h1 class="ShowResult alert text-center">
+    <button class="btn btn-outline-warning my-3" onclick="SubString()">SuB</button>
 
-        </h1>
+    <div class="Result">
 
-    </section>
+    </div>
+
 </body>
-<script src="main.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
+<script src="User-Sign_up.js"></script>
 
 </html>
